--- a/front-end/src/Page3.css
+++ b/front-end/src/Page3.css
@@ -1,11 +1,12 @@
 .Title {
 	box-sizing: border-box;
 	width: 100%;
+	height: 1300px;
 	display: flex;
 	justify-content: center;
 	padding: 1em;
 	margin-bottom: 2em;
-  background-color: rgb(39, 42, 76); 
+  background-color: rgb(39, 42, 76);
 	color: #fff;
 }
 .Page {
